created a new about me html doc as well as a css style sheet

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,6 +12,7 @@
     <ul>
         <li><a href="Google.html" title="Link to Google">Google</a>
         <li><a href="DuckDuckGo.html" title="DuckDuckGo">DuckDuckGo</a></li>
+        <li><a href="about.html" title="About Me">About me</a></li>
     </ul>
 </body>
 </html>
