made a nav bar, a new html page
made a navigation bar, a new html page for my current classes i am taking, and made a new paragraph to my about me page.

--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lab 2</h1>
-    <p>Search Engines</p>
-    <ul>
-        <li><a href="Google.html" title="Link to Google">Google</a>
-        <li><a href="DuckDuckGo.html" title="DuckDuckGo">DuckDuckGo</a></li>
-        <li><a href="about.html" title="About Me">About me</a></li>
-    </ul>
+    <div class= "topnav">
+        <a class= "activate" href= '#home'>Home </a>
+        <a href="Google.html" title="Link to Google">Google</a>
+        <a href="DuckDuckGo.html" title="DuckDuckGo">DuckDuckGo</a></li>
+        <a href="about.html" title="About Me">About me</a></li>
+        <a href= "school_page.html" title= "School Page">School Page</a>
+    </div>
+    <h1> Welcome to my new website! </h1>
 </body>
 </html>
