--- a/about.html
+++ b/about.html
@@ -7,20 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-<h1>About me</h1>
-<p>
-    My name is Peter Gibbons. I have many hobbies, and interests, some of which include basketball, 
-    golf, gaming, and creative writing. After obtaining my dogwood diploma from Lord Byng Secondary 
-    I decided to take a gap year to gain some real-world experience. During this time, I played a lot of golf, 
-    wrote some short stories, developed a passion for game development, and worked at HSBC for almost a year
-     and a half. Throughout my day to day activities at HSBC I developed a yearning sensation to go back to school
-      to hone my skills in computer programming with the goal of becoming a game developer. During my search I 
-      came across BCIT and found out that they offer a Game Development program, to which the first step to getting 
-      in would be by first completing the CIT or CST program. When I came across the description for both the 
-      CIT program as well as the Game Development program, I thought to myself “This is exactly what I 
-      am looking for” so I sent in my application and thankfully got accepted.
-    </p>
-    <img class= "img-me" src="me.jpg" alt="Peter Gibbons">
-    
+    <div class= "topnav">
+        <a href= "index.html" href= '#home'>Home </a>
+        <a href="Google.html" title="Link to Google">Google</a>
+        <a href="DuckDuckGo.html" title="DuckDuckGo">DuckDuckGo</a></li>
+        <a class= "activate" href= '#about'>About Me </a>
+        <a href= "school_page.html" title= "School Page">School Page</a>
+    </div>
+    <h1>About me</h1>
+    <div class= "box">
+        <p>
+            My name is Peter Gibbons. I have many hobbies, and interests, some of which include basketball, 
+            golf, gaming, and creative writing. After obtaining my dogwood diploma from Lord Byng Secondary 
+            I decided to take a gap year to gain some real-world experience. During this time, I played a lot of golf, 
+            wrote some short stories, developed a passion for game development, and worked at HSBC for almost a year
+            and a half. Throughout my day to day activities at HSBC I developed a yearning sensation to go back to school
+            to hone my skills in computer programming with the goal of becoming a game developer. During my search I 
+            came across BCIT and found out that they offer a Game Development program, to which the first step to getting 
+            in would be by first completing the CIT or CST program. When I came across the description for both the 
+            CIT program as well as the Game Development program, I thought to myself “This is exactly what I 
+            am looking for” so I sent in my application and thankfully got accepted.
+        </p>
+        <p>
+            The main reason why I decided to go with the CIT program over the CST program is because I thought it would make myself 
+            a more well rounded programmer. Even though I enjoy making and designing programs alot more then the technical aspect I have 
+            been really enjoying the program so far. I have learnt so many new topics, theories, and rules that i find quite
+            fascinating.
+        </p>
+    </div>
+    <div class= "img-me-box">
+        <img class= "img-me" src="me.jpg" alt="Peter Gibbons">
+    </div>
+        
 </body>
 </html>
